Updaterd project structure, added new models for api responses

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@ riderModule.iml
 # ignore appsettings configuration files
 /appsettings.development.json
 
-# ignore credentials files
-/google-spreadsheet-credentials.json
+#ignore IDE files
+.idea/*
