Added authenticator services, added utils class, refactorings

--- a/Coinbase_Portfolio_Tracker.csproj
+++ b/Coinbase_Portfolio_Tracker.csproj
@@ -16,7 +16,14 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Api\Config" />
       <Folder Include="Api\Services\Google" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
