--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,8 @@
     
     "Coinbase": {
         "Api": {
-            "Key": ""
+            "Key": "",
+            "Secret": ""
         }
     }
 }
