--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,8 @@
     "Coinbase": {
         "Api": {
             "Key": "",
-            "Secret": ""
+            "Secret": "",
+            "BaseUrl": "" 
         }
     }
 }
