--- a/appsettings.json
+++ b/appsettings.json
@@ -8,10 +8,8 @@
     },
     
     "Coinbase": {
-        "Api": {
-            "Key": "",
-            "Secret": "",
-            "BaseUrl": "" 
-        }
+        "ClientId": "",
+        "ClientSecret": "",
+        "Endpoint": "https://api.coinbase.com/v2/"
     }
 }
