Fixed service registration errors, added coinbase error response modclear

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,8 @@
     },
     
     "Coinbase": {
-        "ClientId": "",
-        "ClientSecret": "",
+        "ClientId": "J58FcX0DBjzEeB10",
+        "ClientSecret": "rjpRfFsMFoOtgVCQyUQbkZgaekJTpz7j",
         "Endpoint": "https://api.coinbase.com/v2/"
     }
 }
