--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,8 @@
     },
     
     "Coinbase": {
-        "ClientId": "J58FcX0DBjzEeB10",
-        "ClientSecret": "rjpRfFsMFoOtgVCQyUQbkZgaekJTpz7j",
+        "ClientId": "",
+        "ClientSecret": "",
         "Endpoint": "https://api.coinbase.com/v2/"
     }
 }
