added version field

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,7 @@
     "Coinbase": {
         "ClientId": "",
         "ClientSecret": "",
-        "Endpoint": "https://api.coinbase.com/v2/"
+        "Endpoint": "https://api.coinbase.com/v2/",
+        "ApiVersionDate": ""
     }
 }
