added user secrets for managing secrets

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,9 +8,7 @@
     },
     
     "Coinbase": {
-        "ClientId": "",
-        "ClientSecret": "",
         "Endpoint": "https://api.coinbase.com/v2/",
-        "ApiVersionDate": ""
+        "ApiVersionDate": "2021-03-06"
     }
 }
